# odrive-cpp

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  old_cmake.txt
.github/workflows/: codeql-analysis.yml
include/: library.h  odrive.h  odrive_endpoints.h  odrive_enums.h
old/: CMakeLists.txt  README.md
old/include/: find_device.h
old/test/: main.cpp
src/: odrive.cpp
test/: main.cpp  odrive_config.py
